@@ -222,6 +222,53 @@ name|getFactory
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|comparators
+index|[
+name|i
+index|]
+operator|.
+name|sortType
+argument_list|()
+operator|==
+name|SortField
+operator|.
+name|STRING
+condition|)
+block|{
+name|this
+operator|.
+name|fields
+index|[
+name|i
+index|]
+operator|=
+operator|new
+name|SortField
+argument_list|(
+name|fieldname
+argument_list|,
+name|fields
+index|[
+name|i
+index|]
+operator|.
+name|getLocale
+argument_list|()
+argument_list|,
+name|fields
+index|[
+name|i
+index|]
+operator|.
+name|getReverse
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|this
 operator|.
 name|fields
@@ -251,6 +298,7 @@ name|getReverse
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 name|initialize
 argument_list|(
@@ -579,6 +627,9 @@ parameter_list|,
 name|int
 name|type
 parameter_list|,
+name|Locale
+name|locale
+parameter_list|,
 name|Object
 name|factory
 parameter_list|)
@@ -612,6 +663,8 @@ argument_list|(
 name|field
 argument_list|,
 name|type
+argument_list|,
+name|locale
 argument_list|)
 decl_stmt|;
 synchronized|synchronized
@@ -669,6 +722,9 @@ parameter_list|,
 name|int
 name|type
 parameter_list|,
+name|Locale
+name|locale
+parameter_list|,
 name|Object
 name|factory
 parameter_list|,
@@ -705,6 +761,8 @@ argument_list|(
 name|field
 argument_list|,
 name|type
+argument_list|,
+name|locale
 argument_list|)
 decl_stmt|;
 synchronized|synchronized
@@ -819,6 +877,8 @@ argument_list|,
 name|fieldname
 argument_list|,
 name|type
+argument_list|,
+name|locale
 argument_list|,
 name|factory
 argument_list|)
@@ -948,6 +1008,8 @@ argument_list|,
 name|fieldname
 argument_list|,
 name|type
+argument_list|,
+name|locale
 argument_list|,
 name|factory
 argument_list|,
