@@ -425,6 +425,7 @@ comment|// the contents field is used to search and sort by relevance
 comment|// the int field to sort by int
 comment|// the float field to sort by float
 comment|// the string field to sort by string
+comment|// the i18n field includes accented characters for testing locale-specific sorting
 DECL|field|data
 specifier|private
 name|String
@@ -437,7 +438,7 @@ name|String
 index|[]
 index|[]
 block|{
-comment|// tracer  contents         int            float           string   custom
+comment|// tracer  contents         int            float           string   custom   i18n
 block|{
 literal|"A"
 block|,
@@ -450,6 +451,8 @@ block|,
 literal|"c"
 block|,
 literal|"A-3"
+block|,
+literal|"p\u00EAche"
 block|}
 block|,
 block|{
@@ -464,6 +467,8 @@ block|,
 literal|"i"
 block|,
 literal|"B-10"
+block|,
+literal|"HAT"
 block|}
 block|,
 block|{
@@ -478,6 +483,8 @@ block|,
 literal|"j"
 block|,
 literal|"A-2"
+block|,
+literal|"p\u00E9ch\u00E9"
 block|}
 block|,
 block|{
@@ -492,6 +499,8 @@ block|,
 literal|"a"
 block|,
 literal|"C-0"
+block|,
+literal|"HUT"
 block|}
 block|,
 block|{
@@ -506,6 +515,8 @@ block|,
 literal|"h"
 block|,
 literal|"B-8"
+block|,
+literal|"peach"
 block|}
 block|,
 block|{
@@ -520,6 +531,8 @@ block|,
 literal|"g"
 block|,
 literal|"B-1"
+block|,
+literal|"H\u00C5T"
 block|}
 block|,
 block|{
@@ -534,6 +547,8 @@ block|,
 literal|"f"
 block|,
 literal|"C-100"
+block|,
+literal|"sin"
 block|}
 block|,
 block|{
@@ -548,6 +563,8 @@ block|,
 literal|"e"
 block|,
 literal|"C-88"
+block|,
+literal|"H\u00D8T"
 block|}
 block|,
 block|{
@@ -562,6 +579,8 @@ block|,
 literal|"d"
 block|,
 literal|"A-10"
+block|,
+literal|"s\u00EDn"
 block|}
 block|,
 block|{
@@ -576,6 +595,8 @@ block|,
 literal|"b"
 block|,
 literal|"C-7"
+block|,
+literal|"HOT"
 block|}
 block|,
 block|{
@@ -584,6 +605,8 @@ block|,
 literal|"g"
 block|,
 literal|"1"
+block|,
+literal|null
 block|,
 literal|null
 block|,
@@ -604,6 +627,8 @@ block|,
 literal|null
 block|,
 literal|null
+block|,
+literal|null
 block|}
 block|,
 block|{
@@ -618,12 +643,16 @@ block|,
 literal|null
 block|,
 literal|null
+block|,
+literal|null
 block|}
 block|,
 block|{
 literal|"Z"
 block|,
 literal|"f g"
+block|,
+literal|null
 block|,
 literal|null
 block|,
@@ -941,6 +970,49 @@ name|i
 index|]
 index|[
 literal|5
+index|]
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|UN_TOKENIZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|data
+index|[
+name|i
+index|]
+index|[
+literal|6
+index|]
+operator|!=
+literal|null
+condition|)
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"i18n"
+argument_list|,
+name|data
+index|[
+name|i
+index|]
+index|[
+literal|6
 index|]
 argument_list|,
 name|Field
@@ -2499,6 +2571,266 @@ argument_list|,
 name|sort
 argument_list|,
 literal|"BFHJD"
+argument_list|)
+expr_stmt|;
+block|}
+comment|// test using various international locales with accented characters
+comment|// (which sort differently depending on locale)
+DECL|method|testInternationalSort
+specifier|public
+name|void
+name|testInternationalSort
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|sort
+operator|.
+name|setSort
+argument_list|(
+operator|new
+name|SortField
+argument_list|(
+literal|"i18n"
+argument_list|,
+name|Locale
+operator|.
+name|US
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertMatches
+argument_list|(
+name|full
+argument_list|,
+name|queryY
+argument_list|,
+name|sort
+argument_list|,
+literal|"BFJDH"
+argument_list|)
+expr_stmt|;
+name|sort
+operator|.
+name|setSort
+argument_list|(
+operator|new
+name|SortField
+argument_list|(
+literal|"i18n"
+argument_list|,
+operator|new
+name|Locale
+argument_list|(
+literal|"sv"
+argument_list|,
+literal|"se"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertMatches
+argument_list|(
+name|full
+argument_list|,
+name|queryY
+argument_list|,
+name|sort
+argument_list|,
+literal|"BJDFH"
+argument_list|)
+expr_stmt|;
+name|sort
+operator|.
+name|setSort
+argument_list|(
+operator|new
+name|SortField
+argument_list|(
+literal|"i18n"
+argument_list|,
+operator|new
+name|Locale
+argument_list|(
+literal|"da"
+argument_list|,
+literal|"dk"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertMatches
+argument_list|(
+name|full
+argument_list|,
+name|queryY
+argument_list|,
+name|sort
+argument_list|,
+literal|"BJDHF"
+argument_list|)
+expr_stmt|;
+name|sort
+operator|.
+name|setSort
+argument_list|(
+operator|new
+name|SortField
+argument_list|(
+literal|"i18n"
+argument_list|,
+name|Locale
+operator|.
+name|US
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertMatches
+argument_list|(
+name|full
+argument_list|,
+name|queryX
+argument_list|,
+name|sort
+argument_list|,
+literal|"ECAGI"
+argument_list|)
+expr_stmt|;
+name|sort
+operator|.
+name|setSort
+argument_list|(
+operator|new
+name|SortField
+argument_list|(
+literal|"i18n"
+argument_list|,
+name|Locale
+operator|.
+name|FRANCE
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertMatches
+argument_list|(
+name|full
+argument_list|,
+name|queryX
+argument_list|,
+name|sort
+argument_list|,
+literal|"EACGI"
+argument_list|)
+expr_stmt|;
+block|}
+comment|// Test the MultiSearcher's ability to preserve locale-sensitive ordering
+comment|// by wrapping it around a single searcher
+DECL|method|testInternationalMultiSearcherSort
+specifier|public
+name|void
+name|testInternationalMultiSearcherSort
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Searcher
+name|multiSearcher
+init|=
+operator|new
+name|MultiSearcher
+argument_list|(
+operator|new
+name|Searchable
+index|[]
+block|{
+name|full
+block|}
+argument_list|)
+decl_stmt|;
+name|sort
+operator|.
+name|setSort
+argument_list|(
+operator|new
+name|SortField
+argument_list|(
+literal|"i18n"
+argument_list|,
+operator|new
+name|Locale
+argument_list|(
+literal|"sv"
+argument_list|,
+literal|"se"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertMatches
+argument_list|(
+name|multiSearcher
+argument_list|,
+name|queryY
+argument_list|,
+name|sort
+argument_list|,
+literal|"BJDFH"
+argument_list|)
+expr_stmt|;
+name|sort
+operator|.
+name|setSort
+argument_list|(
+operator|new
+name|SortField
+argument_list|(
+literal|"i18n"
+argument_list|,
+name|Locale
+operator|.
+name|US
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertMatches
+argument_list|(
+name|multiSearcher
+argument_list|,
+name|queryY
+argument_list|,
+name|sort
+argument_list|,
+literal|"BFJDH"
+argument_list|)
+expr_stmt|;
+name|sort
+operator|.
+name|setSort
+argument_list|(
+operator|new
+name|SortField
+argument_list|(
+literal|"i18n"
+argument_list|,
+operator|new
+name|Locale
+argument_list|(
+literal|"da"
+argument_list|,
+literal|"dk"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertMatches
+argument_list|(
+name|multiSearcher
+argument_list|,
+name|queryY
+argument_list|,
+name|sort
+argument_list|,
+literal|"BJDHF"
 argument_list|)
 expr_stmt|;
 block|}
